Wed Jul 28 01:04:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* env.h: remove argv from ruby_frame.

	* eval.c (rb_eval): no more copy on write.

	* eval.c (assign): ditto.

	* eval.c (rb_call0): can receive *rest by specifying negative
	  argc.  (-1 means 0 arg and *rest, -2 means 1 arg and *rest...)

	* eval.c (rb_call0): properly set frame's argc counter.

	* gc.c (rb_gc_mark_frame): need not to mark frame's argv

	* gc.c (run_final): wrong order of data. [ruby-dev:23948]

Tue Jul 27 07:05:04 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): copy on write for argument local variable
	  assignment.

	* eval.c (assign): ditto.

	* eval.c (rb_call0): update ruby_frame->argv with the default
	  value used for the optional arguments.

	* object.c (Init_Object): "===" calls rb_obj_equal() directly.
	  [ruby-list:39937]

Mon Jul 26 11:22:55 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils.escape): should
	  escape space.

Sun Jul 25 10:56:28 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* win32/win32.{h,c} (rb_w32_{f,fd,fs}open): workaround for bcc32's
	  {f,fd,fs}open bug. set errno EMFILE and EBADF. [ruby-dev:23963]

	* test/drb/drbtest.rb: fix method duplication.

Sat Jul 24 13:32:47 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (rb_range_beg_len): returns Qnil only when "beg" points
	  outside of a range.  No boundary check for "end".

Fri Jul 23 16:40:25 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (define_final): should not disclose NODE* to Ruby world.
	  [ruby-dev:23957]

Fri Jul 23 08:52:22 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnected?): new method.

Thu Jul 22 16:41:54 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi/session.rb (CGI::Session::FileStore#update): sets the
	  permission of the session data file to 0600.

	* lib/cgi/session/pstore.rb (CGI::Session::Pstore#initialize):
	  ditto.
